<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout
		android:id="@+id/sensor_linear"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<TextView android:text="@string/accelerometer" style="@style/doov_info_label"/>

		<LinearLayout style="@style/info_sensor_label">
			<TextView android:text="@string/x_is" style="@style/doov_info_label" />
			<TextView android:id="@+id/g_sensor_x" style="@style/doov_info_value" />
		</LinearLayout>

		<LinearLayout style="@style/info_sensor_label">
			<TextView android:text="@string/y_is" style="@style/doov_info_label" />
			<TextView android:id="@+id/g_sensor_y" style="@style/doov_info_value" />
		</LinearLayout>	

		<LinearLayout style="@style/info_sensor_label">
			<TextView android:text="@string/z_is" style="@style/doov_info_label" />
			<TextView android:id="@+id/g_sensor_z" style="@style/doov_info_value" />
		</LinearLayout>	


		<TextView android:text="@string/gsensor_calibration" style="@style/doov_info_label"/>

	</LinearLayout>
	
	<Button
		android:id="@+id/sensor_calibration"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/calibration"
		android:layout_below="@id/sensor_linear"
		/>		
		
	<LinearLayout 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal" 
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true">
		<Button
			android:id="@+id/sensor_pass"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:text="@string/pass"
			android:layout_marginTop="10dip"
			>
		</Button>
		<Button
			android:id="@+id/sensor_false"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:text="@string/falsed"
			android:layout_marginTop="10dip"
			>
		</Button>
	</LinearLayout>
</RelativeLayout>	


