<?xml version="1.0" encoding="utf-8"?>



	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		xmlns:android="http://schemas.android.com/apk/res/android">
		<LinearLayout
			android:id="@+id/sensor_linear"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<TextView
				android:text="@string/hall_test" style="@style/doov_info_sensor"/>
				
		
			
			
<TextView
				android:text="@string/hall_description" style="@style/info_sensor"/>
				

			
			
			
				
			<LinearLayout style="@style/info_sensor_label" android:orientation="horizontal" >
				<TextView android:text="@string/hall_status"	style="@style/info_sensor"/>
	        	<TextView android:id="@+id/hall_status_text" style="@style/info_sensor"  android:text="@string/hall_open"/>
			</LinearLayout>	
																							
		
 		</LinearLayout>
 		<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true">
		<Button
			android:id="@+id/sensor_pass"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:text="@string/pass"
			android:layout_marginTop="10dip"
			>
		</Button>
		<Button
			android:id="@+id/sensor_false"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:text="@string/falsed"
			android:layout_marginTop="10dip"
			>
		</Button>
		</LinearLayout>
	</RelativeLayout>	

