<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/red_led"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/red_led" />

        <Button
            android:id="@+id/blue_led"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blue_led" />

        <Button
            android:id="@+id/green_led"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/green_led" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/led_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pass" />

        <Button
            android:id="@+id/led_fail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fail" />
    </LinearLayout>
</RelativeLayout>